🎈 perf: 移除无用接口
